--- a/Project/Code/rsmMain.css
+++ b/Project/Code/rsmMain.css
@@ -11,7 +11,7 @@ header {
 	margin: 5px;
 	margin-bottom: 15px;
 	padding: 8px;
-	background-color: gray;
+	background-color: lightblue;
 	clear: both;
 	color: white;
 	margin-bottom: 5px;
@@ -31,7 +31,21 @@ h1 {
 
 section {
 	background-color: lightblue;
-	width: 100%;
+	width: 60%;
+	margin: 0 auto;
+	border: hidden;
+	-moz-border-radius-topleft: 5px;
+	-moz-border-radius-topright: 5px;
+	-moz-border-radius-bottomleft: 5px;
+	-moz-border-radius-bottomright: 5px;
+	-webkit-border-top-left-radius: 5px;
+	-webkit-border-top-right-radius: 5px;
+	-webkit-border-bottom-left-radius: 5px;
+	-webkit-border-bottom-right-radius: 5px;
+	border-top-left-radius: 5px;
+	border-top-right-radius: 5px;
+	border-bottom-left-radius: 5px;
+	border-bottom-right-radius: 5px;;
 }
 
 .err_msg {
@@ -42,6 +56,76 @@ section {
 footer {
 	color: #ff0000;
 	text-align: center;
+}
+
+textarea {
+	border-style: inset;
+	border-width: 3px;
+	width: 500px;
+	height: 50px;
+}
+
+.welcome {
+	position: relative;
+	left: 500px;
+}
+
+#username {
+	color: gray;
+}
+
+.logout {
+	position: absolute;
+	right: 2%;
+}
+
+.titles {
+	font-family: 'SouciSansRegular';
+	src: url('SOUCISAN.eot');
+	src: local('SouciSans'), local('SouciSans'), url('SOUCISAN.woff')
+		format('woff'), url('SOUCISAN.ttf') format('truetype');
+	font: 18px bold normal SouciSansRegular;
+}
+
+.History {
+	position: absolute;
+	left: 33%;
+}
+.quicklink{
+
+-webkit-box-sizing: content-box;
+-moz-box-sizing: content-box;
+box-sizing: content-box;
+float: none;
+z-index: auto;
+width: auto;
+height: auto;
+position: static;
+cursor: pointer;
+opacity: 1;
+margin: 0;
+padding: 0 20px;
+overflow: visible;
+border: none;
+-webkit-border-radius: 20px;
+border-radius: 20px;
+font: normal normal bold 20px/40px "Baumans", Helvetica, sans-serif;
+color: black;
+-o-text-overflow: clip;
+text-overflow: clip;
+background: rgb(221, 221, 221);
+-webkit-box-shadow: 0 1px 0 0 rgb(119,119,119) , 0 2px 0 0 rgb(119,119,119) , 0 3px 0 0 rgb(119,119,119) , 0 4px 0 0 rgb(119,119,119) , 0 5px 0 0 rgb(119,119,119) , 0 6px 0 0 rgb(119,119,119) , 0 0 5px 0 rgba(0,0,0,0.0980392) , 0 1px 3px 0 rgba(0,0,0,0.298039) , 0 3px 5px 0 rgba(0,0,0,0.2) , 0 5px 10px 0 rgba(0,0,0,0.247059) , 0 10px 10px 0 rgba(0,0,0,0.2) , 0 20px 20px 0 rgba(0,0,0,0.14902) ;
+box-shadow: 0 1px 0 0 rgb(119,119,119) , 0 2px 0 0 rgb(119,119,119) , 0 3px 0 0 rgb(119,119,119) , 0 4px 0 0 rgb(119,119,119) , 0 5px 0 0 rgb(119,119,119) , 0 6px 0 0 rgb(119,119,119) , 0 0 5px 0 rgba(0,0,0,0.0980392) , 0 1px 3px 0 rgba(0,0,0,0.298039) , 0 3px 5px 0 rgba(0,0,0,0.2) , 0 5px 10px 0 rgba(0,0,0,0.247059) , 0 10px 10px 0 rgba(0,0,0,0.2) , 0 20px 20px 0 rgba(0,0,0,0.14902) ;
+text-shadow: 0 1px 0 #FFFFFF ;
+-webkit-transition: none;
+-moz-transition: none;
+-o-transition: none;
+transition: none;
+-webkit-transform: none;
+transform: none;
+-webkit-transform-origin: 50% 50% 0;
+transform-origin: 50% 50% 0;
+
 }
 
 /* */
