--- a/Project/Code/rsmMain.css
+++ b/Project/Code/rsmMain.css
@@ -1,52 +1,60 @@
-@CHARSET "UTF-8";
+* {
+  margin: 0;
+  padding: 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+li {
+  list-style: none;
+}
+
+.fl {
+  float: left;
+}
+
+.fr {
+  float: right;
+}
+
+.img
+{
+	 width:90% ;
+	 height:270%;
+}
+
+.img1
+{
+	 width:90% ;
+	 height:170%;
+}
+
+.clearfix:after {
+  content: '.';
+  display: block;
+  height: 0;
+  clear: both;
+  visibility: hidden;
+}
+
+.clearfix {
+  zoom: 1;
+}
+
+.progress_scroll::-webkit-scrollbar {
+  width: 5px;
+}
 
 body {
-	font-family: "Times New Roman", Times, serif;
-	font-size: 100%;
-	background-color: linen;
+  background: url(../images/con2.jpg) 0 0 repeat;
+  font-size: 14px;
 }
 
 header {
-	border: 1px outset;
-	margin: 5px;
-	margin-bottom: 15px;
-	padding: 8px;
-	background-color: lightblue;
-	clear: both;
-	color: white;
-	margin-bottom: 5px;
-}
-
-header h1 {
-	text-align: center;
-}
-
-h1 {
-	color: White;
-}
-
-section {
-	background-color: lightblue;
-	width: 60%;
-	margin: 0 auto;
-	border: hidden;
-	-moz-border-radius-topleft: 5px;
-	-moz-border-radius-topright: 5px;
-	-moz-border-radius-bottomleft: 5px;
-	-moz-border-radius-bottomright: 5px;
-	-webkit-border-top-left-radius: 5px;
-	-webkit-border-top-right-radius: 5px;
-	-webkit-border-bottom-left-radius: 5px;
-	-webkit-border-bottom-right-radius: 5px;
-	border-top-left-radius: 5px;
-	border-top-right-radius: 5px;
-	border-bottom-left-radius: 5px;
-	border-bottom-right-radius: 5px;;
-}
-
-.err_msg {
-	color: red;
-	text-decoration: underline;
+  background: url(artResources/ffxiv.png) center top no-repeat;
+  height: 316px;
+  text-indent: -9999px;
 }
 
 footer {
@@ -57,89 +65,147 @@ footer {
 textarea {
 	border-style: inset;
 	border-width: 3px;
-	width: 500px;
-	height: 50px;
+	width: 700px;
+	height: 70px;
 }
 
-.welcome {
-	position: relative;
-	left: 420px;
+.nav {
+  height: 50px;
+  background: lightblue;
+  font-size: 18px;
+  color: #fff;
+  line-height: 50px;
+  padding: 0 40px;
 }
 
-#username {
-	color: gray;
+.nav .nav-item {
+  float: left;
+  text-align: center;
+  border-right: 1px solid #4a5288;
+  padding: 0 26px;
 }
 
-.titles {
-	font-family: 'SouciSansRegular';
-	src: url('SOUCISAN.eot');
-	src: local('SouciSans'), local('SouciSans'), url('SOUCISAN.woff')
-		format('woff'), url('SOUCISAN.ttf') format('truetype');
-	font: 18px bold normal SouciSansRegular;
+.history-box {
+  padding-top: 10px;
 }
 
-
-.quicklink{
-
--webkit-box-sizing: content-box;
--moz-box-sizing: content-box;
-box-sizing: content-box;
-float: none;
-z-index: auto;
-width: auto;
-height: auto;
-position: static;
-cursor: pointer;
-opacity: 1;
-margin: 0;
-padding: 0 20px;
-overflow: visible;
-border: none;
--webkit-border-radius: 20px;
-border-radius: 20px;
-font: normal normal bold 20px/40px "Baumans", Helvetica, sans-serif;
-color: black;
--o-text-overflow: clip;
-text-overflow: clip;
-background: rgb(221, 221, 221);
--webkit-box-shadow: 0 1px 0 0 rgb(119,119,119) , 0 2px 0 0 rgb(119,119,119) , 0 3px 0 0 rgb(119,119,119) , 0 4px 0 0 rgb(119,119,119) , 0 5px 0 0 rgb(119,119,119) , 0 6px 0 0 rgb(119,119,119) , 0 0 5px 0 rgba(0,0,0,0.0980392) , 0 1px 3px 0 rgba(0,0,0,0.298039) , 0 3px 5px 0 rgba(0,0,0,0.2) , 0 5px 10px 0 rgba(0,0,0,0.247059) , 0 10px 10px 0 rgba(0,0,0,0.2) , 0 20px 20px 0 rgba(0,0,0,0.14902) ;
-box-shadow: 0 1px 0 0 rgb(119,119,119) , 0 2px 0 0 rgb(119,119,119) , 0 3px 0 0 rgb(119,119,119) , 0 4px 0 0 rgb(119,119,119) , 0 5px 0 0 rgb(119,119,119) , 0 6px 0 0 rgb(119,119,119) , 0 0 5px 0 rgba(0,0,0,0.0980392) , 0 1px 3px 0 rgba(0,0,0,0.298039) , 0 3px 5px 0 rgba(0,0,0,0.2) , 0 5px 10px 0 rgba(0,0,0,0.247059) , 0 10px 10px 0 rgba(0,0,0,0.2) , 0 20px 20px 0 rgba(0,0,0,0.14902) ;
-text-shadow: 0 1px 0 #FFFFFF ;
--webkit-transition: none;
--moz-transition: none;
--o-transition: none;
-transition: none;
--webkit-transform: none;
-transform: none;
--webkit-transform-origin: 50% 50% 0;
-transform-origin: 50% 50% 0;
-
+.quicklink
+{
+	-webkit-box-sizing: content-box;-moz-box-sizing: content-box;
+	box-sizing: content-box;float: none;z-index: auto;width: auto;height: auto;position: static;
+	cursor: pointer;opacity: 1;margin: 0;padding: 0 20px;
+	overflow: visible;border: none;/* -webkit-border-radius: 20px; */border-radius: 20px;
+	font: normal normal bold 20px/40px "Baumans", Helvetica, sans-serif;color: black;
+	-o-text-overflow: clip;/* text-overflow: clip; */background: rgb(221, 221, 221);
+	-webkit-box-shadow: 0 1px 0 0 rgb(119,119,119) , 0 2px 0 0 rgb(119,119,119) , 0 3px 0 0 rgb(119,119,119) , 0 4px 0 0 rgb(119,119,119) , 0 5px 0 0 rgb(119,119,119) , 0 6px 0 0 rgb(119,119,119) , 0 0 5px 0 rgba(0,0,0,0.0980392) , 0 1px 3px 0 rgba(0,0,0,0.298039) , 0 3px 5px 0 rgba(0,0,0,0.2) , 0 5px 10px 0 rgba(0,0,0,0.247059) , 0 10px 10px 0 rgba(0,0,0,0.2) , 0 20px 20px 0 rgba(0,0,0,0.14902);
+	box-shadow: 0 1px 0 0 rgb(119,119,119) , 0 2px 0 0 rgb(119,119,119) , 0 3px 0 0 rgb(119,119,119) , 0 4px 0 0 rgb(119,119,119) , 0 5px 0 0 rgb(119,119,119) , 0 6px 0 0 rgb(119,119,119) , 0 0 5px 0 rgba(0,0,0,0.0980392) , 0 1px 3px 0 rgba(0,0,0,0.298039) , 0 3px 5px 0 rgba(0,0,0,0.2) , 0 5px 10px 0 rgba(0,0,0,0.247059) , 0 10px 10px 0 rgba(0,0,0,0.2) , 0 20px 20px 0 rgba(0,0,0,0.14902);
+	text-shadow: 0 1px 0 #FFFFFF;-webkit-transition: none;-moz-transition: none;-o-transition: none;transition: none;-webkit-transform: none;transform: none;-webkit-transform-origin: 50% 50% 0;transform-origin: 50% 50% 0;
 }
 
-.logout {
-	position: absolute;
-	right: 2%;
-	top:260px;
-	height:35px;
-
+h3
+{
+	font-size: 20px;
+  font-family: "Microsoft Yahei";
+  color: #fcc70e;
+  line-height: 37px;
+  height: 37px;
+  background: url(../images/bt.gif) 0 0 no-repeat;
+  text-indent: 0px;
+}
+.history-table {
+  padding-top: 0px;
+  border:2px solid black;
 }
 
-#History{
-	position:relative;
-	border: 1px solid black;
+.history-table .table-head {
+  background: lightblue;
 }
 
-#BP{
-	position:relative;
-	border: 1px solid black;
+.history-table .table-head td {
+  height: 35px;
+  line-height: 35px;
+  font-size: 16px;
+  text-align: center;
 }
 
-#item{
-	position:relative;
-	border: 1px solid black;
+.history-table .table-body {
+  height: 185px;
+  overflow-y: auto;
+  font-size: 16px;
+  color: #a2adde;
 }
 
-.load{
-	position: relative;
-  	left: 300px;
+.history-table .table-body1 {
+  height: 185px;
+  overflow-y: auto;
+  font-size: 16px;
+  color: #a2adde;
 }
+
+.history-table .table-body td {
+  height: 30px;
+  line-height: 30px;
+  text-align: center;
+}
+
+.history-table .table-body1 td {
+  height: 22px;
+  line-height: 22px;
+  padding-left:10px;
+}
+
+.item 
+{
+  border:1px solid #a4b4e7;
+}
+
+.history-table .table-body .shuz {
+  margin-top: 0px;
+  margin-left: 20px;
+  width: 35px;
+  height: 35px;
+  display: block;
+  background: #3d4473;
+  border-radius: 90px;
+  font-size: 14px;
+  text-align: center;
+  line-height: 35px;
+  color: linen;
+}
+
+.btn 
+{
+  border-radius: 10px;
+  padding: 0 10px;
+}
+
+.s-table-box {
+  width: 50%;
+}
+
+.s-table-box table {
+  font-size: 16px;
+  text-align: center;
+  border-collapse: collapse;
+}
+
+.s-table-box table tbody tr {
+  height: 35px;
+  line-height: 35px;
+  text-align: center;
+}
+
+body{
+	
+	background-color: linen;
+}
+
+#makeComments{
+	border-collapse: collapse; 
+	width="100%";
+	border="0"; 
+	cellpadding="0"; 
+	cellspacing="0"; 
+	word-wrap: break-word;                                      	
+}
+/*# sourceMappingURL=style.css.map */
